Fix xref in the doc

--- a/docs/source/examples/so-algorithm.ipynb
+++ b/docs/source/examples/so-algorithm.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we instantiate the [`PSO`](#evox.algorithms.pso_variants.pso) algorithm. We specify the following settings:\n",
+    "Here, we instantiate the [`PSO`](#evox.algorithms.so.pso_variants.pso.PSO) algorithm. We specify the following settings:\n",
     "\n",
     "- `pop_size`: The size of the particle swarm (population).\n",
     "- `lb` and `ub`: The lower and upper bounds for each dimension in the search space.\n",
