--- a/docs/source/guide/developer/custom_hpo_prob.ipynb
+++ b/docs/source/guide/developer/custom_hpo_prob.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Deploy HPO with Custom Algorithms\n",
     "\n",
-    "In this chapter, we will focus on deploying HPO with custom algorithms, emphasizing the details rather than the overall workflow. A brief introduction to HPO deployment is provided in the previous chapter, [Efficient HPO with EvoX](#/guide/user/3-hpo), and prior reading is highly recommended."
+    "In this chapter, we will focus on deploying HPO with custom algorithms, emphasizing the details rather than the overall workflow. A brief introduction to HPO deployment is provided in the [tutorial](#/tutorial/tutorial_part7), and prior reading is highly recommended."
    ]
   },
   {
@@ -17,63 +17,46 @@
     "\n",
     "Since we need to transform the inner algorithm into the problem, it's crucial that the inner algorithm is parallelizable. Therefore, some modifications to the algorithm may be necessary.\n",
     "\n",
-    "To ensure the function is JIT-compilable, it must meet the conditions outlined in [JIT components](#/guide/developer/2-jit-able). In addition to these requirements, the algorithm must also satisfy the following two constraints:\n",
-    "\n",
     "1. The algorithm should have no methods with in-place operations on the attributes of the algorithm itself.\n",
     "\n",
     "```python\n",
     "class ExampleAlgorithm(Algorithm):\n",
-    "    def __init__(self,...): \n",
+    "    def __init__(self,...):\n",
     "        self.pop = torch.rand(10,10) #attribute of the algorithm itself\n",
-    "        pass\n",
     "\n",
     "    def step_in_place(self): # method with in-place operations\n",
     "        self.pop.copy_(pop)\n",
-    "        pass\n",
     "\n",
     "    def step_out_of_place(self): # method without in-place operations\n",
     "        self.pop = pop\n",
-    "        pass\n",
     "```\n",
     "\n",
     "2. The code logic does not rely on python control flow.\n",
     "\n",
     "```python\n",
     "class ExampleAlgorithm(Algorithm):\n",
-    "    def __init__(self,...): \n",
-    "        self.pop = rand(10,10) #attribute of the algotirhm itself\n",
+    "    def __init__(self,...):\n",
+    "        self.pop = rand(10,10) #attribute of the algorithm itself\n",
     "        pass\n",
     "\n",
     "    def plus(self, y):\n",
-    "        self.pop += y\n",
-    "        pass\n",
+    "        return self.pop + y\n",
     "\n",
     "    def minus(self, y):\n",
-    "        self.pop -= y\n",
-    "        pass      \n",
+    "        return self.pop - y\n",
     "\n",
     "    def step_with_python_control_flow(self, y): # function with python control flow\n",
     "        x = rand()\n",
-    "        if x>0.5:\n",
-    "            self.plus(y)\n",
+    "        if x > 0.5:\n",
+    "            self.pop = self.plus(y)\n",
     "        else:\n",
-    "            self.minus(y)\n",
-    "        pass\n",
+    "            self.pop = self.minus(y)\n",
     "\n",
     "    def step_without_python_control_flow(self, y): # function without python control flow\n",
     "        x = rand()\n",
     "        cond = x > 0.5\n",
-    "        _if_else_ = TracingCond(self.plus, self.minus)\n",
-    "        _if_else_.cond(cond,y)\n",
-    "        self.pop = pop\n",
-    "        pass\n",
-    "```\n",
-    "\n",
-    "In EvoX, we can easily make the algorithm parallelizable by the [`@trace_impl`](#trace_impl) decorator. \n",
-    "\n",
-    "The parameter of this decorator is a non-parallelizable function, and the decorated function is a rewrite of the original function. Detailed introduction of [`@trace_impl`](#trace_impl) can be found in [JIT Components](#/guide/developer/2-jit-able).\n",
-    "\n",
-    "Under this mechanism, we can retain the original function for use outside HPO tasks while enabling efficient computation within HPO tasks. Moreover, this modification is highly convenient."
+    "        self.pop = torch.cond(cond, self.plus, self.minus, y)\n",
+    "```\n"
    ]
   },
   {
@@ -140,12 +123,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we define the algorithm. The original `step` function is non-parallelizable, so we rewrite it using the [`@trace_impl`](#trace_impl) decorator to make it parallelizable. Specifically, we modify in-place operations and adjust the Python control flow."
+    "Next, we define the algorithm, we use the [`torch.cond`](#https://pytorch.org/docs/stable/generated/torch.cond.html) function and make sure it is parallelizable. Specifically, we modify in-place operations and adjust the Python control flow."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,77 +157,15 @@
     "        pop = torch.rand(self.pop_size, self.dim, dtype=self.lb.dtype, device=self.lb.device)  # simply random sampling\n",
     "        pop = pop * (self.ub - self.lb)[None, :] + self.lb[None, :]\n",
     "        control_number = torch.rand()\n",
-    "        if control_number < 0.5:  # conditional control\n",
-    "            pop = self.strategy_1(pop)\n",
-    "        else:\n",
-    "            pop = self.strategy_2(pop)\n",
-    "        self.pop.copy_(pop)  # in-place update\n",
-    "        self.fit.copy_(self.evaluate(pop))\n",
-    "\n",
-    "    # (using class methods for control flow)\n",
-    "    @trace_impl(step)  # rewrite the step function to support vmap\n",
-    "    def trace_step(self):\n",
-    "        pop = torch.rand(self.pop_size, self.dim, dtype=self.lb.dtype, device=self.lb.device)\n",
-    "        pop = pop * (self.ub - self.lb)[None, :] + self.lb[None, :]\n",
-    "        pop = pop * self.hp[0]\n",
-    "        control_number = torch.rand()\n",
-    "        cond = control_number < 0.5\n",
-    "        # Deal with the conditional control flow equivalent in tracing\n",
-    "        branches = (self.strategy_1, self.strategy_2)\n",
-    "        state, names = self.prepare_control_flow(*branches)\n",
-    "        _if_else_ = TracingCond(*branches)\n",
-    "        state = _if_else_.cond(state, cond, pop)\n",
-    "        self.after_control_flow(state, *names)\n",
-    "        # Evaluate\n",
-    "        self.fit = self.evaluate(pop)"
+    "        self.pop = torch.cond(control_number < 0.5, self.strategy_1, self.strategy_2, (pop,))\n",
+    "        self.fit = self.evaluate(self.pop)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To handle the Python control flow, we use [`TracingCond`](#TracingCond), [`TracingWhile`](#TracingWhile) and [`TracingSwitch`](#TracingSwitch). Since, in tracing mode, variables outside the method may be incorrectly interpreted as static variables, we need to use state to track them. A detailed introduction to [`TracingCond`](#TracingCond), [`TracingWhile`](#TracingWhile) and [`TracingSwitch`](#TracingSwitch) can be found in [JIT Components](#/guide/developer/2-jit-able). Below, we provide two equivalent implementations for the `trace_step` method.\n",
-    "\n",
-    "```python\n",
-    "# Equivalent to the following code (Local function style)\n",
-    "\n",
-    "    @trace_impl(step)  # rewrite the step function to support vmap\n",
-    "    def trace_step(self):\n",
-    "        pop = torch.rand(self.pop_size, self.dim, dtype=self.lb.dtype, device=self.lb.device)\n",
-    "        pop = pop * (self.ub - self.lb)[None, :] + self.lb[None, :]\n",
-    "        pop = pop * self.hp[0]\n",
-    "        control_number = torch.rand()\n",
-    "        cond = control_number < 0.5\n",
-    "        # Deal with the conditional control flow equivalent in tracing\n",
-    "        branches = (lambda: pop * self.hp[1], lambda: pop * self.hp[2])\n",
-    "        state, names = self.prepare_control_flow(*branches)\n",
-    "        _if_else_ = TracingCond(*branches, stateful_functions=True)\n",
-    "        state, pop = _if_else_.cond(state, cond)\n",
-    "        self.after_control_flow(state, *names)\n",
-    "        # Evaluate\n",
-    "        self.pop = pop\n",
-    "        self.fit = self.evaluate(pop)\n",
-    "\n",
-    "\n",
-    "# Equivalent to the following code (Pure function style)\n",
-    "\n",
-    "    @trace_impl(step)  # rewrite the step function to support vmap\n",
-    "    def trace_step(self):\n",
-    "        pop = torch.rand(self.pop_size, self.dim, dtype=self.lb.dtype, device=self.lb.device)\n",
-    "        pop = pop * (self.ub - self.lb)[None, :] + self.lb[None, :]\n",
-    "        pop = pop * self.hp[0]\n",
-    "        control_number = torch.rand()\n",
-    "        cond = control_number < 0.5\n",
-    "        # Deal with the conditional control flow equivalent in tracing\n",
-    "        branches = (lambda p, hp: p * hp[1], lambda p, hp: p * hp[2])\n",
-    "        _if_else_ = TracingCond(*branches, stateful_functions=False) # defaults to False for no member function\n",
-    "        pop = _if_else_.cond(cond, pop, self.hp)\n",
-    "        # Evaluate\n",
-    "        self.pop = pop\n",
-    "        self.fit = self.evaluate(pop)\n",
-    "```\n",
-    "\n",
-    "Next, we can use the [`StdWorkflow`](#StdWorkflow) to wrap the [`problem`](#evox.problems), [`algorithm`](#evox.algorithms) and [`monitor`](#Monitor). Then we use the [`HPOProblemWrapper`](#HPOProblemWrapper) to transform the [`StdWorkflow`](#StdWorkflow) to HPO problem."
+    "To handle the Python control flow, we use [`torch.cond`](https://pytorch.org/docs/stable/generated/torch.cond.html), next, we can use the [`StdWorkflow`](#StdWorkflow) to wrap the [`problem`](#evox.problems), [`algorithm`](#evox.algorithms) and [`monitor`](#Monitor). Then we use the [`HPOProblemWrapper`](#HPOProblemWrapper) to transform the [`StdWorkflow`](#StdWorkflow) to HPO problem."
    ]
   },
   {
