Remove old imports in the developer guide

--- a/docs/source/guide/developer/custom_hpo_prob.ipynb
+++ b/docs/source/guide/developer/custom_hpo_prob.ipynb
@@ -85,16 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "\n",
     "from evox.algorithms.pso_variants.pso import PSO\n",
-    "from evox.core import Algorithm, Mutable, Parameter, Problem, trace_impl\n",
+    "from evox.core import Algorithm, Mutable, Parameter, Problem\n",
     "from evox.problems.hpo_wrapper import HPOFitnessMonitor, HPOProblemWrapper\n",
-    "from evox.utils import TracingCond\n",
     "from evox.workflows import EvalMonitor, StdWorkflow"
    ]
   },
